--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "day1": "node dist/day1.js",
     "day2": "node dist/day2.js",
-    "day3": "node dist/day3.js"
+    "day3": "node dist/day3.js",
+    "day4": "node dist/day4.js"
   },
   "author": "Tadej",
   "license": "ISC",
