day 5 part 2 wip

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "day1": "node dist/day1.js",
     "day2": "node dist/day2.js",
     "day3": "node dist/day3.js",
-    "day4": "node dist/day4.js"
+    "day4": "node dist/day4.js",
+    "day5": "node dist/day5.js"
   },
   "author": "Tadej",
   "license": "ISC",
