--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "day2": "node dist/day2.js",
     "day3": "node dist/day3.js",
     "day4": "node dist/day4.js",
-    "day5": "node dist/day5.js"
+    "day5": "node dist/day5.js",
+    "day6": "node dist/day6.js"
   },
   "author": "Tadej",
   "license": "ISC",
