--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "day3": "node dist/day3.js",
     "day4": "node dist/day4.js",
     "day5": "node dist/day5.js",
-    "day6": "node dist/day6.js"
+    "day6": "node dist/day6.js",
+    "day7": "node dist/day7.js"
   },
   "author": "Tadej",
   "license": "ISC",
